--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,12 @@ dependencies:
   firebase_auth: ^5.6.0
   cloud_firestore: ^5.6.9
   shimmer: ^3.0.0
-  intl: ^0.20.2
   flutter_searchable_dropdown: ^2.0.0
   image_picker: ^1.1.2
   firebase_storage: ^12.4.7
   url_launcher: ^6.3.1
+  intl: ^0.19.0
+  device_preview: ^1.1.0
 
 
 dev_dependencies:
