--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   image_picker: ^1.1.2
   firebase_storage: ^12.4.7
   url_launcher: ^6.3.1
-  intl: ^0.20.2
+  intl: 0.19.0
   device_preview: ^1.1.0
 
 
